fix(radio): add font-weight to radio label and prevent be covered
add font-weight to radio label and prevent be covered

--- a/src/components/radio/style/index.less
+++ b/src/components/radio/style/index.less
@@ -63,6 +63,7 @@
     display: inline-block;
     padding: 0 8px;
     color: @color-text-checkbox-secondary-normal;
+    font-weight: normal;
     font-size: 14px;
     line-height: 22px;
     vertical-align: middle;
